<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorBackground"
    android:orientation="vertical"
    android:paddingTop="50dp"
    tools:context=".ChangeTheme">

    <TextView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/left_angle"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="40dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="25dp"
        android:textColor="?attr/colorOnBackground"
        android:text="@string/theme_change"
        android:textSize="30sp"
        android:textStyle="bold" />


    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/baw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/black_amp_white"
                android:textAlignment="center"
                app:drawableTopCompat="@drawable/black_white_icon" />

            <TextView
                android:id="@+id/amber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/amber"
                android:textAlignment="center"
                app:drawableTopCompat="@drawable/amber_icon" />

            <TextView
                android:id="@+id/bag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/blue_amp_gray"
                android:textAlignment="center"
                app:drawableTopCompat="@drawable/blue_gray_icon" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/cyan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/cyan"
                android:textAlignment="center"
                app:drawableTopCompat="@drawable/cyan_icon" />

            <TextView
                android:id="@+id/green"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/green"
                android:textAlignment="center"
                app:drawableTopCompat="@drawable/green_icon" />

            <TextView
                android:id="@+id/gray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/gray"
                android:textAlignment="center"
                app:drawableTopCompat="@drawable/gray_icon" />
        </TableRow>
    </TableLayout>


</LinearLayout>